--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,7 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php [QSA,L]
+
+#a ver si va
+#Redirect /prueba-htaccess https://www.google.com
+
